--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/db540a34d6.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/NELSON.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
